--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
 <meta name="keywords" content="Huang Fuang, geochemistry, isotopes">
 <meta name="baidu-site-verification" content="ITQ6Nnr1MZ" />
@@ -13,7 +12,7 @@
 <link rel="icon" href="./src/img/fhuang.ico" type="image/x-icon" />
 <link rel="stylesheet" href="./src/css/main.css?v=1.2" type="text/css">
 <link rel="stylesheet" href="./src/css/mobie.css?v=1.2" type="text/css">
-<title>朱德利-重庆市数字农业服务工程技术研究中心</title>
+<title>重庆市数字农业服务工程技术研究中心</title>
 <script src="./src/js/jquery.min.js"></script>
 <script src=""></script>
 <script src="./src/js/main.js?v=1.2"></script>
