文件夹完善

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 
 
+
+
 <meta name="keywords" content="Huang Fuang, geochemistry, isotopes">
 <meta name="baidu-site-verification" content="ITQ6Nnr1MZ" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -48,11 +50,11 @@
             <div class="line whole hidden-large" style="background-color:#014DA0"></div>
             <li id="index"><a href="./index.html">首页</a></li>
             <li id="people"><a href="./people/people.html">团队成员</a></li>
-            <li id="research"><a href="/research.html">科学研究</a></li>
-            <li id="news"><a href="/news.html">新闻中心</a></li>
-            <li id="activity"><a href="/activity.html">学术活动</a></li>
-            <li id="trainning"><a href="/trainning.html">人才培养</a></li>
-            <li id="documents" class="last_child"><a href="/documents.html">制度与文档</a></li>
+            <li id="research"><a href="./research/research.html">科学研究</a></li>
+            <li id="news"><a href="./news/news.html">新闻中心</a></li>
+            <li id="activity"><a href="./activity/activity.html">学术活动</a></li>
+            <li id="trainning"><a href="./trainning/trainning.html">人才培养</a></li>
+            <li id="documents" class="last_child"><a href="./documents/documents.html">制度与文档</a></li>
         </ul>
     </div>
 </div>
